--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -6,4 +6,5 @@ RUN pip install -r requirements.txt
 
 COPY src/ .
 
-CMD [ "python", "main.py" ]
+
+CMD [ "python", "-m", "unittest", "discover", "-s", "tests/" ]
